# hf_pe_industry_predictability

./: .gitignore  CLAUDE.md  PIPELINE.md  main.py  pyproject.toml
pipeline/: __init__.py  auth.py  config.py
pipeline/compute/: __init__.py  sector_pe.py  sector_returns.py
pipeline/extract/: __init__.py  ccm_link.py  checkpoint.py  compustat.py  crsp.py
pipeline/transform/: __init__.py  gics_assign.py  link_merge.py  ttm_eps.py  weekly_resample.py
